<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="orText">O</string>
    <string name="appName">Pantry<b>Chef</b></string>
    <string name="forgetPasswordText">¿Olvidaste la contraseña?</string>
    <string name="changeText"><u>Cambiar</u></string>
    <string name="login">Iniciar sesión</string>
    <string name="loginGoogle">Iniciar con Google</string>
    <string name="register">Crear cuenta</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="textResetPassword">Introduzca su email de la cuenta. Le enviaremos instrucciones para restablecer su contraseña.</string>
    <string name="resetPassword">Enviar</string>
    <string name="haveAccountText">¿Ya tienes cuenta?</string>
    <string name="loginLink"><u>Iniciar sesión</u></string>
    <string name="noAccountText">¿No tienes cuenta?</string>
    <string name="registerLink"><u>Regístrate</u></string>
    <string name="userName">Nombre de usuario</string>
    <string name="LogOut">Cerrar sesión</string>

    <!-- Bottom Navigation -->
    <string name="home">Inicio</string>
    <string name="shopping">Compras</string>
    <string name="favs">Favoritos</string>

    <!-- Home -->
    <string name="searchText">Pulsa para añadir los ingredientes</string>

    <!-- Ingredients List -->
    <string name="searchRecipes">Buscar recetas</string>
    <string name="addIngredients">Escribe los ingredientes que tengas</string>
    <string name="noResults">No tenemos ese ingrediente</string>

    <!-- Recipe List -->
    <string name="addFav">Añadir a favoritos</string>
    <string name="recipeTitle">Recetas</string>

    <!-- Recipe Step -->
    <string name="setTimer">Poner cronómetro</string>
    <string name="previousStep">Paso anterior</string>
    <string name="mic">Micrófono</string>
    <string name="nextStep">Siguiente paso</string>
    <string name="finish">Terminar</string>
    <string name="stepTitle">Paso %1$d</string>
    <string name="stepDescription">Lorem ipsum dolor sit amet...</string>

    <!-- Recipe Favorites -->
    <string name="noFavs">No tienes recetas favoritas</string>
    <string name="favsTitle">Recetas favoritas</string>

    <!-- Recipe Details -->
    <string name="recipeDetails">Detalles de la receta</string>
    <string name="ingredients">Ingredientes</string>
    <string name="timeAprox">Tiempo aproximado: %1$d min</string>
    <string name="difficulty">Dificultad: %1$s</string>

    <!-- Recipe Ingredients List -->
    <string name="shoppingListBtnText">Hacer lista de la compra</string>
    <string name="startCookingBtnText">Comenzar</string>

    <!-- Shopping List -->
    <string name="shoppingListTitle">Lista de la compra</string>
    <string name="noItems">No tienes ningún ingrediente que comprar</string>
    <string name="allRecipes">Todas las recetas</string>

    <!-- Timer -->
    <string name="timerRunning">Temporizador en Ejecución</string>
    <string name="timerNotificationText">Tu tiempo de cocción está corriendo. Toca para más detalles.</string>
    <string name="timerStarted">Temporizador iniciado</string>
    <string name="timerTitle">Pantrychef cronómetro</string>
    <string name="timerTimeLeft">Tiempo restante: %1$s min</string>
    <string name="channelName">PantryChef</string>
    <string name="channelDescription">El tiempo ha terminado.</string>

</resources>