<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvRecipeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Nombre de la receta"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvRecipeTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/timeAprox"
        app:layout_constraintTop_toBottomOf="@id/tvRecipeName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvRecipeDifficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        app:layout_constraintTop_toBottomOf="@id/tvRecipeTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvIngredientsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ingredients"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeDifficulty" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIngredientsTitle" />

    <Button
        android:id="@+id/btnMakeShoppingList"
        android:layout_width="224dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/shoppingListBtnText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnStartCooking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStartCooking"
        android:layout_width="224dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/startCookingBtnText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>