<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addIngredients" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupSelectedIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:singleLine="false"/>

    <TextView
        android:id="@+id/textViewNoResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noResults"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/searchRecipesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/searchRecipes"
        android:textColor="@color/white"/>
</LinearLayout>
