<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recipe_card_background"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_marginBottom="8dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre Receta"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/recipeTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeAprox" />

        <TextView
            android:id="@+id/recipeDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/favoriteIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/addFav"
            android:src="@drawable/ic_favs"
            android:layout_gravity="bottom"
            />
    </LinearLayout>
</LinearLayout>
